Possible JDK11 cfg